# Geegle3

./: .bazelrc  .gitattributes  .gitignore  BUILD  CODEOWNERS  DOMAINS.md  README.md  WORKSPACE  angular-metadata.tsconfig.json  docker-build.sh  docker-compose.legacy.yml  docker-compose.yml  package-lock.json  package.json  plot.md  tsconfig.json
.buildkite/: ci.sh  pipeline.yml
.circleci/: config.yml
NewHire/drive/: BUILD.bazel  test.py
WorkExperience/: plot.md
WorkExperience/web-guest-kiosk/app/: BUILD.bazel  helper.go  main.go
WorkExperience/web-guest-kiosk/app/templates/: pickup.html
WorkExperience/web-privatefile/app/: BUILD.bazel  helper.go  main.go
advanced/general-shell/: BUILD.bazel  flag  sffe_shell.json
advanced/general-shell/chal/: shell.c
advanced/pwn-game/: BUILD.bazel  Dockerfile  sffe_game.json
advanced/pwn-payroll/: BUILD.bazel  Dockerfile
advanced/pwn-payroll/chal/: payroll
advanced/re-tellGeegle/: BUILD.bazel  flag  sol.py
advanced/re-trycatch/: BUILD.bazel  Dockerfile
advanced/re-trycatch/chal/: trycatch
advanced/web_memegen/: BUILD.bazel  Dockerfile  README.md  flag
advanced/web_memegen/solve/: adamyi.jpg.php
advanced/web_memegen/src/: index.php
aws/: README.md  down.sh  geegle.tf_  readyup.sh  sshkey.key  sshkey.pub  up.sh  update.sh
chals/: BUILD
chals/ir/who-is-attacking-me/: BUILD.bazel  challenge.libsonnet
chals/ir/who-is-attacking-me/chal/: gen.py
chals/pwn/game/: BUILD.bazel  challenge.libsonnet  flag  sol.py
chals/pwn/game/sol/: sol.py
chals/pwn/geelang/: BUILD.bazel  challenge.libsonnet
chals/pwn/geelang/chal/: BUILD.bazel  instructions.md
chals/pwn/geelang/sol/: geelang-compiler  sol.py
chals/pwn/intern-project/: BUILD.bazel  challenge.libsonnet  flag  sffe_itern-project.json
chals/pwn/intern-project/sol/: sol.py
chals/pwn/intern-project/src/: intern-project.c
chals/pwn/payroll/: BUILD.bazel  challenge.libsonnet  flag  sffe_payroll.json
chals/pwn/payroll/chal/: payroll.c
chals/pwn/payroll/sol/: cli-relay  payroll  sol.py
drive/: README.md  load.go  pymd5.py  test.pb.go  test.proto
gae/: Dockerfile  README.md  example.yml
geelang/: IDEA.md  a.out  geelang-compiler.c  geelang-loader.c  geelang-runner.c  geelang.h
geemail-backend/: auth.go  geemail.db  main.go
geemail-frontend/: Dockerfile  angular.json  build.sh  package-lock.json  package.json
guest_kiosk/: helper.go  main.go
highschool/pwn-intern-project/: BUILD.bazel  sol.py
highschool/web-filesystem/: BUILD.bazel  generate_site.sh
infra/: BUILD
infra/cli-relay/: BUILD.bazel  challenge.libsonnet  main.go
infra/cli-relay/src/: cli-relay  index.html
infra/cli-static/: BUILD.bazel
infra/cli-static/healthz/: BUILD.bazel  main.go
infra/cli-static/sffelinks/: BUILD.bazel  auth.go  main.go
infra/cli-static/static/: index.html
infra/dns/: BUILD.bazel  main.go
infra/gae/: BUILD.bazel  README.md  challenge.libsonnet  run.sh
infra/gae/src/: requirements.txt
infra/gae/src/app/: __init__.py  mss.py
infra/gae/src/app/templates/: error.html  index.html
infra/gae/tomcat/: server.xml
infra/gaia/: BUILD.bazel  auth.go  challenge.libsonnet  config.json  main.go
infra/gaia/templates/: index.html
infra/gaia/templates/layouts/: base.html
infra/geemail-backend/: BUILD.bazel  Dockerfile  README.md  auth.go  challenge.libsonnet  config.json  flags.libsonnet  geemail.db  main.go
infra/geemail-frontend/: BUILD.bazel  README.md  angular.json  challenge.libsonnet  main.go
infra/geemail-frontend/e2e/: BUILD.bazel
infra/geemail-frontend/e2e/src/: app.e2e-spec.ts
infra/geemail-frontend/src/: BUILD.bazel  index.html  styles.scss
infra/geemail-frontend/src/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.spec.ts  app.module.ts  htmlToPlain.pipe.ts  linkify.pipe.ts  replaceLineBreaks.pipe.ts
infra/geemail-frontend/src/app/header/: header.component.html
infra/geemail-frontend/src/app/mail-folders/: mail-folders.component.html  mail-folders.component.ts
infra/geemail-frontend/src/app/mail-folders/inbox/: inbox.component.html  inbox.component.ts
infra/geemail-frontend/src/app/mail-folders/open-mail/: open-mail.component.html  open-mail.component.ts
infra/geemail-frontend/src/app/mail-folders/sent/: sent.component.html  sent.component.ts
infra/geemail-frontend/src/app/mail-items/new-mail/: new-mail.component.html  new-mail.component.ts
infra/geemail-frontend/src/app/shared/: data.service.ts  mail.model.ts  mail.service.ts
infra/geemail-frontend/src/environments/: BUILD.bazel  environment.prod.ts  environment.ts
infra/gsmtpd/: BUILD.bazel  challenge.libsonnet  main.go
infra/gsmtpd/client/: client.py
infra/gsmtpd/server/: mailserver
infra/gsmtpd/sol/: attack.py
infra/mss/: BUILD.bazel  challenge.libsonnet  config.json  main.go
infra/scoreboard/: BUILD.bazel  auth.go  challenge.libsonnet  config.json  config.jsonnet  emails.libsonnet  flags.libsonnet  main.go
infra/scoreboard/templates/: index.html
infra/scoreboard/templates/layouts/: base.html
infra/sffe/: BUILD.bazel  README.md  challenge.libsonnet  main.go  sffe.jsonnet
infra/sffe/context/: BUILD.bazel  context.go
infra/sffe/web/: BUILD.bazel  auth.go  downloader.go  uploader.go  web.go
infra/uberproxy/: .gitignore  BUILD.bazel  README.md  auth.go  clirelay.go  config.go  config.json  error.go  http.go  ip.go  logging.go  login.go  main.go  network.go  proxy.go  ssl.go  websocket.go
infra/uberproxy/certs/: README.md  apps.geegle.org.key  apps.geegle.org.pem  corp.geegle.org.key  corp.geegle.org.pem  geegle.org.key  geegle.org.pem
infra/uberproxy/templates/: cli-relay  cli-relay.py  error.html  login.html  ws.html
intern-project/: Dockerfile  sol.py  xinetd.conf
jwtkeys/: jwtRS256.key  jwtRS256.key.pub
kix/: Dockerfile  key
mss/: Dockerfile  README.md  main.go
oldchals_hs/misc-quicksort/: BUILD.bazel
oldchals_hs/web-filesystem/: BUILD.bazel
sffe/: Dockerfile  main.go
tools/: BUILD  challenge.bzl  challenges_list.bzl  generatechallengeslist.py  sffe.bzl  tarscript.bzl
(+392 files in other folders)
