load("@io_bazel_rules_docker//container:container.bzl", "container_image")

cc_binary(
    name = "shell",
    srcs = ["chal/shell.c"],
    copts = [
        "-m32",
        "-fno-stack-protector",
        "-mpreferred-stack-boundary=2",
        "-masm=intel",
    ],
    linkopts = [
    ],
)

container_image(
    name = "image",
    base = "@ubuntu1804-with-32bit-libc//image",
    cmd = [
        "/websocketd",
        "--port=80",
        "--staticdir=/static",
        "--binary=true",
        "/shell",
    ],
    files = [
        ":flag",
        ":shell",
        "//infra/cli-static",
        "@websocketd",
    ],
    visibility = ["//visibility:public"],
)
