load("@io_bazel_rules_docker//container:container.bzl", "container_image")

filegroup(
    name = "sffe",
    srcs = [
        ":sffe_tellGeegle.json",
        ":tellGeegle",
    ],
    visibility = ["//infra/sffe:__pkg__"],
)

cc_binary(
    name = "tellGeegle",
    srcs = ["chal/tellGeegle.c"],
    copts = ["-O0"],
    linkopts = ["-O0"],
)

container_image(
    name = "image",
    base = "@ubuntu1804//image",
    cmd = [
        "/websocketd",
        "--port=80",
        "--staticdir=/static",
        "--binary=true",
        "/tellGeegle",
    ],
    files = [
        ":flag",
        ":tellGeegle",
        "//infra/cli-static",
        "@websocketd",
    ],
    visibility = ["//visibility:public"],
)
