load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("//tools:challenge.bzl", "ctf_challenge")

ctf_challenge()

go_image(
    name = "image",
    args = [
        "$(location :src)",
    ],
    data = [
        ":src",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "geegle.org/infra/cli-relay",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "solver",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
