load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "cli-static",
    deps = [
        ":cli",
        ":static",
    ],
)

pkg_tar(
    name = "static",
    srcs = glob(["static/*"]),
    mode = "0755",
    strip_prefix = ".",
)

pkg_tar(
    name = "cli",
    deps = [
        ":sffelinks",
    ],
)

pkg_tar(
    name = "sffelinks",
    srcs = ["//infra/cli-static/sffelinks"],
    mode = "0755",
    package_dir = "/cli",
    strip_prefix = "sffelinks/darwin_amd64_stripped/",
)
