load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "geegle.org/infra/dns",
    visibility = ["//visibility:private"],
    deps = ["@com_github_miekg_dns//:go_default_library"],
)

go_binary(
    name = "dns",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
