load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    args = [
        "/app/infra/geemail-frontend/image.binary.runfiles/geegle3/infra/geemail-frontend/src/prodapp",  # hack FIXME
    ],
    data = [
        "//infra/geemail-frontend/src:prodapp",
    ],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "geegle.org/infra/geemail-frontend",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "geemail-frontend",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
