load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "initfiles",
    srcs = [
        "//chals/pwn/game:sffe",
        "//chals/pwn/geelang:sffe",
        "//chals/pwn/payroll:sffe",
        "//chals/pwn/shell:sffe",
        "//chals/re/tellGeegle:sffe",
    ],
    mode = "0755",
    package_dir = "/initfiles",
)

container_image(
    name = "image",
    base = ":image_without_initfiles",
    tars = [
        ":initfiles",
    ],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image_without_initfiles",
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "geegle.org/infra/sffe",
    visibility = ["//visibility:private"],
    deps = [
        "//infra/sffe/context:go_default_library",
        "//infra/sffe/web:go_default_library",
    ],
)

go_binary(
    name = "sffe",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
