load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

container_image(
    name = "image",
    base = ":image_base",
    ports = [
        "80",
        "443",
    ],
    tars = [
        ":templates",
    ],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "templates",
    srcs = glob(["templates/*"]),
    mode = "0755",
    strip_prefix = ".",
)

go_image(
    name = "image_base",
    args = [
        "$(location :config.json)",
        "$(location :certs)",
        "/templates",
    ],
    data = [
        ":certs",
        ":config.json",
    ],
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "config.go",
        "error.go",
        "http.go",
        "ip.go",
        "logging.go",
        "login.go",
        "main.go",
        "network.go",
        "proxy.go",
        "ssl.go",
        "websocket.go",
    ],
    importpath = "geegle.org/infra/uberproxy",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_dgrijalva_jwt_go//:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
    ],
)

go_binary(
    name = "uberproxy",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
