load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("//:tools/tarscript.bzl", "tarscript")

tarscript(
    name = "site",
    src = ":generate_site.sh",
)

container_image(
    name = "image",
    base = ":image_without_site",
    tars = [":site"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image_without_site",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "geegle.org/oldchals_hs/web-filesystem",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "web-filesystem",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
