load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "helper.go",
        "main.go",
    ],
    importpath = "geegle.org/WorkExperience/web-guest-kiosk/app",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_skip2_go_qrcode//:go_default_library",
        "@com_github_tuotoo_qrcode//:go_default_library",
    ],
)

go_binary(
    name = "app",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
