load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("//tools:sffe.bzl", "sffe_files")
load("//tools:challenge.bzl", "ctf_challenge")

ctf_challenge()

# sffe_files([":game"])

cc_binary(
    name = "game",
    srcs = ["chal/game.c"],
    copts = [
        "-m32",
        "-fno-stack-protector",
        "-O0",
    ],
    linkopts = [
        "-m32",
        "-O0",
    ],
)

container_image(
    name = "image",
    base = "@ubuntu1804//image",
    cmd = [
        "/websocketd",
        "--port=80",
        "--cgidir=/cgi",
        "--staticdir=/static",
        "--binary=true",
        "/game",
    ],
    files = [
        ":clisffe",
        ":flag",
        ":game",
        "@com_github_joewalnes_websocketd//:websocketd",
    ],
    tars = [
        "//infra/cli-static",
    ],
    visibility = ["//visibility:public"],
)
