load("@io_bazel_rules_jsonnet//jsonnet:jsonnet.bzl", "jsonnet_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("//tools:sffe.bzl", "sffe_files")
load("//tools:challenge.bzl", "ctf_challenge")

ctf_challenge()

sffe_files([":geelang-compiler"])

cc_binary(
    name = "geelang-compiler",
    srcs = glob([
        "chal/*.c",
        "chal/*.h",
    ]),
    copts = ["-g"],
    linkopts = ["-g"],
)

container_image(
    name = "image",
    base = "@ubuntu1804//image",
    cmd = [
        "/websocketd",
        "--port=80",
        "--staticdir=/static",
        "--binary=true",
        "/geelang-compiler",
    ],
    files = [
        ":flag",
        ":geelang-compiler",
        "//infra/cli-static",
        "@com_github_joewalnes_websocketd//:websocketd",
    ],
    visibility = ["//visibility:public"],
)

jsonnet_library(
    name = "jsonnet",
    srcs = [
        "challenge.libsonnet",
    ],
    visibility = ["//chals:__pkg__"],
)
