load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("//tools:sffe.bzl", "sffe_files")
load("//tools:challenge.bzl", "ctf_challenge")

ctf_challenge()

# sffe_files([":geelang-compiler"])

cc_binary(
    name = "geelang-compiler",
    srcs = glob([
        "chal/*.c",
        "chal/*.h",
    ]),
    copts = ["-g", "-z norelro"],
    linkopts = ["-g", "-z norelro"],
)

container_image(
    name = "image",
    base = "@ubuntu1804//image",
    cmd = [
        "/websocketd",
        "--port=80",
        "--cgidir=/cgi",
        "--staticdir=/static",
        "--binary=true",
        "/geelang-compiler",
    ],
    files = [
        ":clisffe",
        ":flag",
        ":geelang-compiler",
        "@com_github_joewalnes_websocketd//:websocketd",
    ],
    tars = [
        "//infra/cli-static",
    ],
    visibility = ["//visibility:public"],
)
