load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("//tools:sffe.bzl", "sffe_files")
load("//tools:challenge.bzl", "ctf_challenge")

ctf_challenge()

sffe_files([":intern-project"])

cc_binary(
    name = "intern-project",
    srcs = ["src/intern-project.c"],
)

container_image(
    name = "image",
    base = "@ubuntu1804//image",
    cmd = [
        "/websocketd",
        "--port=80",
        "--staticdir=/static",
        "--binary=true",
        "/intern-project",
    ],
    files = [
        ":flag",
        ":intern-project",
        "//infra/cli-static",
        "@com_github_joewalnes_websocketd//:websocketd",
    ],
    visibility = ["//visibility:public"],
)
