load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("//tools:sffe.bzl", "sffe_files")
load("//tools:challenge.bzl", "ctf_challenge")

ctf_challenge()

# sffe_files([":payroll"])

cc_binary(
    name = "payroll",
    srcs = ["chal/payroll.c"],
    copts = [
        "-m32",
        "-fno-stack-protector",
        "-mpreferred-stack-boundary=2",
        "-masm=intel",
    ],
    linkopts = [
        "-m32",
        "-no-pie",
    ],
)

container_image(
    name = "image",
    base = "@ubuntu1804-with-32bit-libc//image",
    cmd = [
        "/websocketd",
        "--port=80",
        "--cgidir=/cli",
        "--staticdir=/static",
        "--binary=true",
        "/payroll",
    ],
    files = [
        ":clisffe",
        ":flag",
        ":payroll",
        "//infra/cli-static",
        "@com_github_joewalnes_websocketd//:websocketd",
    ],
    tars = [
        "//infra/cli-static",
    ],
    visibility = ["//visibility:public"],
)
